# dmeyf2025

./: .gitignore  README.md  X_train_columns_and_shape.txt  analyze_experiments.py  check_model_feature_importance.ipynb  cleanup_debug.py  config.py  config.yaml  config1.yaml  config4.yaml  configBis.yaml  entregas.ipynb  exp_colab.ipynb  experiment_template.py  experiment_utils.py  experimento1.yaml  experimento2.yaml  experimento3.yaml  experimento4.yaml  experimento5.yaml  experimento_ejemplo_completo.yaml  feature_importance.ipynb  predict.ipynb  prod_00.ipynb  prod_02.ipynb  pyproject.toml  results.csv  run_all_experiments.sh  run_experiment.py  run_experiment2.py  run_experiment3.py  run_experiment4.py  run_experiments.sh  run_experiments_sequence.sh  run_single_experiment.sh  test.ipynb  test_empty_name.yaml  test_feature_importance.py  test_feature_importance_v2.py  test_parallelization.py  (+23 more)
DEBUG_DeltaLags2_0.5_50_01-02_G/: config.yaml
DeltaLags2_0.5_50_01-02_G/: config.yaml
Experimentos/: Resultados.xlsx  exp_000.ipynb  exp_001.ipynb  exp_002.ipynb  exp_003.ipynb  exp_004.ipynb  exp_010.ipynb  exp_011.ipynb  exp_012.ipynb  exp_013.ipynb  exp_014.ipynb  exp_015.ipynb  exp_016.ipynb  exp_017.ipynb  exp_018.ipynb  exp_019.ipynb  exp_021.ipynb  exp_023.ipynb
basura_util/: run_all_experiments.sh  run_experiments_sequence.sh  train_final.ipynb
experiments/: ensemble_final_and.csv  ensemble_final_or.csv
notebooks/: [2025-09-20] Clustering.ipynb  [2025-10-01] First_model.ipynb  predict.ipynb
results/: config2.yaml  config3.yaml  config4.yaml  run_experiment.py  run_experiment2.py  run_experiment4.py
tests/: test_avg_ratio_transformer.py  test_clean_zeros_transformer.py  test_feature_dropper_transformer.py  test_period_stats_transformer.py  test_sampler.py  (+3 more)
(+214 files in other folders)
