[project]
name = "dmeyf2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Franco Jofré",email = "franco.jofre@mercadolibre.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "dmeyf2025", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
